// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<UITextInput /> Focus styles, "errorMessage=false" 1`] = `
Object {
  "errorMessage": Array [
    Object {
      "backgroundColor": "var(--vscode-inputValidation-errorBackground)",
      "borderBottom": "1px solid var(--vscode-inputValidation-errorBorder)",
      "borderColor": "var(--vscode-inputValidation-errorBorder)",
      "borderLeft": "1px solid var(--vscode-inputValidation-errorBorder)",
      "borderRadius": "var(--vscode-cornerRadius-small)",
      "borderRight": "1px solid var(--vscode-inputValidation-errorBorder)",
      "color": "var(--vscode-input-foreground)",
      "margin": 0,
      "paddingBottom": 5,
      "paddingLeft": 8,
      "paddingTop": 4,
    },
  ],
  "field": Array [
    Object {
      "backgroundColor": "var(--vscode-input-background)",
      "borderRadius": 4,
      "boxSizing": "border-box",
      "color": "var(--vscode-input-foreground)",
      "fontSize": "13px",
      "fontWeight": "normal",
      "selectors": Object {
        "::placeholder": Object {
          "color": "var(--vscode-input-placeholderForeground)",
          "fontSize": 13,
        },
      },
    },
    Object {
      "lineHeight": "normal",
    },
    undefined,
    undefined,
    undefined,
    undefined,
  ],
  "fieldGroup": Array [
    Object {
      "backgroundColor": "var(--vscode-input-background)",
      "borderColor": "var(--vscode-editorWidget-border)",
      "borderRadius": 4,
      "borderStyle": "solid",
      "borderWidth": 1,
      "boxSizing": "initial",
      "color": "var(--vscode-input-foreground)",
    },
    Object {
      "height": 24,
      "maxHeight": 24,
      "minHeight": 24,
    },
    Object {
      "selectors": Object {
        "&:hover": Object {
          "borderColor": "var(--vscode-focusBorder)",
        },
      },
    },
    undefined,
    undefined,
    undefined,
    Object {
      "selectors": Object {
        ":after": Object {
          "border": "1px solid var(--vscode-focusBorder)",
          "borderRadius": 4,
        },
      },
    },
  ],
  "icon": Array [
    Object {
      "bottom": 2,
    },
  ],
  "root": Object {
    "height": "auto",
  },
  "subComponentStyles": Object {
    "label": Object {
      "root": Array [
        Object {
          "color": "var(--vscode-input-foreground)",
          "fontSize": "13px",
          "fontWeight": "bold",
          "marginTop": 25,
          "padding": "4px 0",
        },
        undefined,
        undefined,
      ],
    },
  },
  "suffix": Object {
    "backgroundColor": "var(--vscode-input-background)",
  },
}
`;

exports[`<UITextInput /> Focus styles, "errorMessage=true" 1`] = `
Object {
  "errorMessage": Array [
    Object {
      "backgroundColor": "var(--vscode-inputValidation-errorBackground)",
      "borderBottom": "1px solid var(--vscode-inputValidation-errorBorder)",
      "borderColor": "var(--vscode-inputValidation-errorBorder)",
      "borderLeft": "1px solid var(--vscode-inputValidation-errorBorder)",
      "borderRadius": "var(--vscode-cornerRadius-small)",
      "borderRight": "1px solid var(--vscode-inputValidation-errorBorder)",
      "color": "var(--vscode-input-foreground)",
      "margin": 0,
      "paddingBottom": 5,
      "paddingLeft": 8,
      "paddingTop": 4,
    },
  ],
  "field": Array [
    Object {
      "backgroundColor": "var(--vscode-input-background)",
      "borderRadius": 4,
      "boxSizing": "border-box",
      "color": "var(--vscode-input-foreground)",
      "fontSize": "13px",
      "fontWeight": "normal",
      "selectors": Object {
        "::placeholder": Object {
          "color": "var(--vscode-input-placeholderForeground)",
          "fontSize": 13,
        },
      },
    },
    Object {
      "lineHeight": "normal",
    },
    undefined,
    undefined,
    undefined,
    undefined,
  ],
  "fieldGroup": Array [
    Object {
      "backgroundColor": "var(--vscode-input-background)",
      "borderColor": "var(--vscode-editorWidget-border)",
      "borderRadius": 4,
      "borderStyle": "solid",
      "borderWidth": 1,
      "boxSizing": "initial",
      "color": "var(--vscode-input-foreground)",
    },
    Object {
      "height": 24,
      "maxHeight": 24,
      "minHeight": 24,
    },
    Object {
      "selectors": Object {
        "&:hover": Object {
          "borderColor": "var(--vscode-focusBorder)",
        },
      },
    },
    undefined,
    undefined,
    undefined,
    Object {
      "selectors": Object {
        ":after": Object {
          "border": "1px solid var(var(--vscode-inputValidation-errorBorder))",
          "borderRadius": 4,
        },
      },
    },
  ],
  "icon": Array [
    Object {
      "bottom": 2,
    },
  ],
  "root": Object {
    "height": "auto",
  },
  "subComponentStyles": Object {
    "label": Object {
      "root": Array [
        Object {
          "color": "var(--vscode-input-foreground)",
          "fontSize": "13px",
          "fontWeight": "bold",
          "marginTop": 25,
          "padding": "4px 0",
        },
        undefined,
        undefined,
      ],
    },
  },
  "suffix": Object {
    "backgroundColor": "var(--vscode-input-background)",
  },
}
`;

exports[`<UITextInput /> Readonly input field with value 1`] = `
Object {
  "errorMessage": Array [
    Object {
      "backgroundColor": "var(--vscode-inputValidation-errorBackground)",
      "borderBottom": "1px solid var(--vscode-inputValidation-errorBorder)",
      "borderColor": "var(--vscode-inputValidation-errorBorder)",
      "borderLeft": "1px solid var(--vscode-inputValidation-errorBorder)",
      "borderRadius": "var(--vscode-cornerRadius-small)",
      "borderRight": "1px solid var(--vscode-inputValidation-errorBorder)",
      "color": "var(--vscode-input-foreground)",
      "margin": 0,
      "paddingBottom": 5,
      "paddingLeft": 8,
      "paddingTop": 4,
    },
  ],
  "field": Array [
    Object {
      "backgroundColor": "var(--vscode-input-background)",
      "borderRadius": 4,
      "boxSizing": "border-box",
      "color": "var(--vscode-input-foreground)",
      "fontSize": "13px",
      "fontWeight": "normal",
      "selectors": Object {
        "::placeholder": Object {
          "color": "var(--vscode-input-placeholderForeground)",
          "fontSize": 13,
        },
      },
    },
    Object {
      "lineHeight": "normal",
    },
    undefined,
    undefined,
    Object {
      "backgroundColor": "var(--vscode-editor-background)",
      "fontStyle": "italic",
    },
    undefined,
  ],
  "fieldGroup": Array [
    Object {
      "backgroundColor": "var(--vscode-input-background)",
      "borderColor": "var(--vscode-editorWidget-border)",
      "borderRadius": 4,
      "borderStyle": "solid",
      "borderWidth": 1,
      "boxSizing": "initial",
      "color": "var(--vscode-input-foreground)",
    },
    Object {
      "height": 24,
      "maxHeight": 24,
      "minHeight": 24,
    },
    Object {
      "selectors": Object {
        "&:hover": Object {
          "borderColor": "var(--vscode-focusBorder)",
        },
      },
    },
    undefined,
    Object {
      "backgroundColor": "var(--vscode-editor-background)",
      "borderStyle": "dashed",
      "selectors": undefined,
    },
    undefined,
    undefined,
  ],
  "icon": Array [
    Object {
      "bottom": 2,
    },
  ],
  "root": Object {
    "height": "auto",
  },
  "subComponentStyles": Object {
    "label": Object {
      "root": Array [
        Object {
          "color": "var(--vscode-input-foreground)",
          "fontSize": "13px",
          "fontWeight": "bold",
          "marginTop": 25,
          "padding": "4px 0",
        },
        undefined,
        undefined,
      ],
    },
  },
  "suffix": Object {
    "backgroundColor": "var(--vscode-input-background)",
  },
}
`;

exports[`<UITextInput /> Styles - default 1`] = `
Object {
  "errorMessage": Array [
    Object {
      "backgroundColor": "var(--vscode-inputValidation-errorBackground)",
      "borderBottom": "1px solid var(--vscode-inputValidation-errorBorder)",
      "borderColor": "var(--vscode-inputValidation-errorBorder)",
      "borderLeft": "1px solid var(--vscode-inputValidation-errorBorder)",
      "borderRadius": "var(--vscode-cornerRadius-small)",
      "borderRight": "1px solid var(--vscode-inputValidation-errorBorder)",
      "color": "var(--vscode-input-foreground)",
      "margin": 0,
      "paddingBottom": 5,
      "paddingLeft": 8,
      "paddingTop": 4,
    },
  ],
  "field": Array [
    Object {
      "backgroundColor": "var(--vscode-input-background)",
      "borderRadius": 4,
      "boxSizing": "border-box",
      "color": "var(--vscode-input-foreground)",
      "fontSize": "13px",
      "fontWeight": "normal",
      "selectors": Object {
        "::placeholder": Object {
          "color": "var(--vscode-input-placeholderForeground)",
          "fontSize": 13,
        },
      },
    },
    Object {
      "lineHeight": "normal",
    },
    undefined,
    undefined,
    undefined,
    undefined,
  ],
  "fieldGroup": Array [
    Object {
      "backgroundColor": "var(--vscode-input-background)",
      "borderColor": "var(--vscode-editorWidget-border)",
      "borderRadius": 4,
      "borderStyle": "solid",
      "borderWidth": 1,
      "boxSizing": "initial",
      "color": "var(--vscode-input-foreground)",
    },
    Object {
      "height": 24,
      "maxHeight": 24,
      "minHeight": 24,
    },
    Object {
      "selectors": Object {
        "&:hover": Object {
          "borderColor": "var(--vscode-focusBorder)",
        },
      },
    },
    undefined,
    undefined,
    undefined,
    undefined,
  ],
  "icon": Array [
    Object {
      "bottom": 2,
    },
  ],
  "root": Object {
    "height": "auto",
  },
  "subComponentStyles": Object {
    "label": Object {
      "root": Array [
        Object {
          "color": "var(--vscode-input-foreground)",
          "fontSize": "13px",
          "fontWeight": "bold",
          "marginTop": 25,
          "padding": "4px 0",
        },
        undefined,
        undefined,
      ],
    },
  },
  "suffix": Object {
    "backgroundColor": "var(--vscode-input-background)",
  },
}
`;

exports[`<UITextInput /> Styles - error message Error 1`] = `
Object {
  "errorMessage": Array [
    Object {
      "backgroundColor": "var(--vscode-inputValidation-errorBackground)",
      "borderBottom": "1px solid var(--vscode-inputValidation-errorBorder)",
      "borderColor": "var(--vscode-inputValidation-errorBorder)",
      "borderLeft": "1px solid var(--vscode-inputValidation-errorBorder)",
      "borderRadius": "var(--vscode-cornerRadius-small)",
      "borderRight": "1px solid var(--vscode-inputValidation-errorBorder)",
      "color": "var(--vscode-input-foreground)",
      "margin": 0,
      "paddingBottom": 5,
      "paddingLeft": 8,
      "paddingTop": 4,
    },
  ],
  "field": Array [
    Object {
      "backgroundColor": "var(--vscode-input-background)",
      "borderRadius": 4,
      "boxSizing": "border-box",
      "color": "var(--vscode-input-foreground)",
      "fontSize": "13px",
      "fontWeight": "normal",
      "selectors": Object {
        "::placeholder": Object {
          "color": "var(--vscode-input-placeholderForeground)",
          "fontSize": 13,
        },
      },
    },
    Object {
      "lineHeight": "normal",
    },
    undefined,
    undefined,
    undefined,
    undefined,
  ],
  "fieldGroup": Array [
    Object {
      "backgroundColor": "var(--vscode-input-background)",
      "borderColor": "var(--vscode-editorWidget-border)",
      "borderRadius": 4,
      "borderStyle": "solid",
      "borderWidth": 1,
      "boxSizing": "initial",
      "color": "var(--vscode-input-foreground)",
    },
    Object {
      "height": 24,
      "maxHeight": 24,
      "minHeight": 24,
    },
    Object {
      "selectors": Object {
        "&:hover": Object {
          "borderColor": "var(--vscode-focusBorder)",
        },
      },
    },
    undefined,
    undefined,
    undefined,
    undefined,
  ],
  "icon": Array [
    Object {
      "bottom": 2,
    },
  ],
  "root": Object {
    "height": "auto",
  },
  "subComponentStyles": Object {
    "label": Object {
      "root": Array [
        Object {
          "color": "var(--vscode-input-foreground)",
          "fontSize": "13px",
          "fontWeight": "bold",
          "marginTop": 25,
          "padding": "4px 0",
        },
        undefined,
        undefined,
      ],
    },
  },
  "suffix": Object {
    "backgroundColor": "var(--vscode-input-background)",
  },
}
`;

exports[`<UITextInput /> Styles - error message Info 1`] = `
Object {
  "errorMessage": Array [
    Object {
      "backgroundColor": "var(--vscode-inputValidation-infoBackground)",
      "borderBottom": "1px solid var(--vscode-inputValidation-infoBorder)",
      "borderColor": "var(--vscode-inputValidation-infoBorder)",
      "borderLeft": "1px solid var(--vscode-inputValidation-infoBorder)",
      "borderRadius": "var(--vscode-cornerRadius-small)",
      "borderRight": "1px solid var(--vscode-inputValidation-infoBorder)",
      "color": "var(--vscode-input-foreground)",
      "margin": 0,
      "paddingBottom": 5,
      "paddingLeft": 8,
      "paddingTop": 4,
    },
  ],
  "field": Array [
    Object {
      "backgroundColor": "var(--vscode-input-background)",
      "borderRadius": 4,
      "boxSizing": "border-box",
      "color": "var(--vscode-input-foreground)",
      "fontSize": "13px",
      "fontWeight": "normal",
      "selectors": Object {
        "::placeholder": Object {
          "color": "var(--vscode-input-placeholderForeground)",
          "fontSize": 13,
        },
      },
    },
    Object {
      "lineHeight": "normal",
    },
    undefined,
    undefined,
    undefined,
    undefined,
  ],
  "fieldGroup": Array [
    Object {
      "backgroundColor": "var(--vscode-input-background)",
      "borderColor": "var(--vscode-editorWidget-border)",
      "borderRadius": 4,
      "borderStyle": "solid",
      "borderWidth": 1,
      "boxSizing": "initial",
      "color": "var(--vscode-input-foreground)",
    },
    Object {
      "height": 24,
      "maxHeight": 24,
      "minHeight": 24,
    },
    Object {
      "selectors": Object {
        "&:hover": Object {
          "borderColor": "var(--vscode-focusBorder)",
        },
      },
    },
    undefined,
    undefined,
    undefined,
    undefined,
  ],
  "icon": Array [
    Object {
      "bottom": 2,
    },
  ],
  "root": Object {
    "height": "auto",
  },
  "subComponentStyles": Object {
    "label": Object {
      "root": Array [
        Object {
          "color": "var(--vscode-input-foreground)",
          "fontSize": "13px",
          "fontWeight": "bold",
          "marginTop": 25,
          "padding": "4px 0",
        },
        undefined,
        undefined,
      ],
    },
  },
  "suffix": Object {
    "backgroundColor": "var(--vscode-input-background)",
  },
}
`;

exports[`<UITextInput /> Styles - error message Warning 1`] = `
Object {
  "errorMessage": Array [
    Object {
      "backgroundColor": "var(--vscode-inputValidation-warningBackground)",
      "borderBottom": "1px solid var(--vscode-inputValidation-warningBorder)",
      "borderColor": "var(--vscode-inputValidation-warningBorder)",
      "borderLeft": "1px solid var(--vscode-inputValidation-warningBorder)",
      "borderRadius": "var(--vscode-cornerRadius-small)",
      "borderRight": "1px solid var(--vscode-inputValidation-warningBorder)",
      "color": "var(--vscode-input-foreground)",
      "margin": 0,
      "paddingBottom": 5,
      "paddingLeft": 8,
      "paddingTop": 4,
    },
  ],
  "field": Array [
    Object {
      "backgroundColor": "var(--vscode-input-background)",
      "borderRadius": 4,
      "boxSizing": "border-box",
      "color": "var(--vscode-input-foreground)",
      "fontSize": "13px",
      "fontWeight": "normal",
      "selectors": Object {
        "::placeholder": Object {
          "color": "var(--vscode-input-placeholderForeground)",
          "fontSize": 13,
        },
      },
    },
    Object {
      "lineHeight": "normal",
    },
    undefined,
    undefined,
    undefined,
    undefined,
  ],
  "fieldGroup": Array [
    Object {
      "backgroundColor": "var(--vscode-input-background)",
      "borderColor": "var(--vscode-editorWidget-border)",
      "borderRadius": 4,
      "borderStyle": "solid",
      "borderWidth": 1,
      "boxSizing": "initial",
      "color": "var(--vscode-input-foreground)",
    },
    Object {
      "height": 24,
      "maxHeight": 24,
      "minHeight": 24,
    },
    Object {
      "selectors": Object {
        "&:hover": Object {
          "borderColor": "var(--vscode-focusBorder)",
        },
      },
    },
    undefined,
    undefined,
    undefined,
    undefined,
  ],
  "icon": Array [
    Object {
      "bottom": 2,
    },
  ],
  "root": Object {
    "height": "auto",
  },
  "subComponentStyles": Object {
    "label": Object {
      "root": Array [
        Object {
          "color": "var(--vscode-input-foreground)",
          "fontSize": "13px",
          "fontWeight": "bold",
          "marginTop": 25,
          "padding": "4px 0",
        },
        undefined,
        undefined,
      ],
    },
  },
  "suffix": Object {
    "backgroundColor": "var(--vscode-input-background)",
  },
}
`;

exports[`<UITextInput /> Styles - multiline=false, disabled=true, readOnly=undefined 1`] = `
Object {
  "errorMessage": Array [
    Object {
      "backgroundColor": "var(--vscode-inputValidation-errorBackground)",
      "borderBottom": "1px solid var(--vscode-inputValidation-errorBorder)",
      "borderColor": "var(--vscode-inputValidation-errorBorder)",
      "borderLeft": "1px solid var(--vscode-inputValidation-errorBorder)",
      "borderRadius": "var(--vscode-cornerRadius-small)",
      "borderRight": "1px solid var(--vscode-inputValidation-errorBorder)",
      "color": "var(--vscode-input-foreground)",
      "margin": 0,
      "paddingBottom": 5,
      "paddingLeft": 8,
      "paddingTop": 4,
    },
  ],
  "field": Array [
    Object {
      "backgroundColor": "var(--vscode-input-background)",
      "borderRadius": 4,
      "boxSizing": "border-box",
      "color": "var(--vscode-input-foreground)",
      "fontSize": "13px",
      "fontWeight": "normal",
      "selectors": Object {
        "::placeholder": Object {
          "color": "var(--vscode-input-placeholderForeground)",
          "fontSize": 13,
        },
      },
    },
    Object {
      "lineHeight": "normal",
    },
    undefined,
    undefined,
    undefined,
    undefined,
  ],
  "fieldGroup": Array [
    Object {
      "backgroundColor": "var(--vscode-input-background)",
      "borderColor": "var(--vscode-editorWidget-border)",
      "borderRadius": 4,
      "borderStyle": "solid",
      "borderWidth": 1,
      "boxSizing": "initial",
      "color": "var(--vscode-input-foreground)",
    },
    Object {
      "height": 24,
      "maxHeight": 24,
      "minHeight": 24,
    },
    Object {
      "selectors": Object {
        "&:hover": Object {
          "borderColor": "var(--vscode-focusBorder)",
        },
      },
    },
    undefined,
    undefined,
    undefined,
    undefined,
  ],
  "icon": Array [
    Object {
      "bottom": 2,
    },
  ],
  "root": Object {
    "height": "auto",
  },
  "subComponentStyles": Object {
    "label": Object {
      "root": Array [
        Object {
          "color": "var(--vscode-input-foreground)",
          "fontSize": "13px",
          "fontWeight": "bold",
          "marginTop": 25,
          "padding": "4px 0",
        },
        undefined,
        undefined,
      ],
    },
  },
  "suffix": Object {
    "backgroundColor": "var(--vscode-input-background)",
  },
}
`;

exports[`<UITextInput /> Styles - multiline=false, disabled=undefined, readOnly=true 1`] = `
Object {
  "errorMessage": Array [
    Object {
      "backgroundColor": "var(--vscode-inputValidation-errorBackground)",
      "borderBottom": "1px solid var(--vscode-inputValidation-errorBorder)",
      "borderColor": "var(--vscode-inputValidation-errorBorder)",
      "borderLeft": "1px solid var(--vscode-inputValidation-errorBorder)",
      "borderRadius": "var(--vscode-cornerRadius-small)",
      "borderRight": "1px solid var(--vscode-inputValidation-errorBorder)",
      "color": "var(--vscode-input-foreground)",
      "margin": 0,
      "paddingBottom": 5,
      "paddingLeft": 8,
      "paddingTop": 4,
    },
  ],
  "field": Array [
    Object {
      "backgroundColor": "var(--vscode-input-background)",
      "borderRadius": 4,
      "boxSizing": "border-box",
      "color": "var(--vscode-input-foreground)",
      "fontSize": "13px",
      "fontWeight": "normal",
      "selectors": Object {
        "::placeholder": Object {
          "color": "var(--vscode-input-placeholderForeground)",
          "fontSize": 13,
        },
      },
    },
    Object {
      "lineHeight": "normal",
    },
    undefined,
    undefined,
    Object {
      "backgroundColor": "var(--vscode-editor-background)",
      "fontStyle": "italic",
    },
    undefined,
  ],
  "fieldGroup": Array [
    Object {
      "backgroundColor": "var(--vscode-input-background)",
      "borderColor": "var(--vscode-editorWidget-border)",
      "borderRadius": 4,
      "borderStyle": "solid",
      "borderWidth": 1,
      "boxSizing": "initial",
      "color": "var(--vscode-input-foreground)",
    },
    Object {
      "height": 24,
      "maxHeight": 24,
      "minHeight": 24,
    },
    Object {
      "selectors": Object {
        "&:hover": Object {
          "borderColor": "var(--vscode-focusBorder)",
        },
      },
    },
    undefined,
    Object {
      "backgroundColor": "var(--vscode-editor-background)",
      "borderStyle": "dashed",
      "selectors": Object {
        "&:hover": Object {
          "borderColor": "var(--vscode-editorWidget-border)",
        },
      },
    },
    undefined,
    undefined,
  ],
  "icon": Array [
    Object {
      "bottom": 2,
    },
  ],
  "root": Object {
    "height": "auto",
  },
  "subComponentStyles": Object {
    "label": Object {
      "root": Array [
        Object {
          "color": "var(--vscode-input-foreground)",
          "fontSize": "13px",
          "fontWeight": "bold",
          "marginTop": 25,
          "padding": "4px 0",
        },
        undefined,
        undefined,
      ],
    },
  },
  "suffix": Object {
    "backgroundColor": "var(--vscode-input-background)",
  },
}
`;

exports[`<UITextInput /> Styles - multiline=false, disabled=undefined, readOnly=undefined 1`] = `
Object {
  "errorMessage": Array [
    Object {
      "backgroundColor": "var(--vscode-inputValidation-errorBackground)",
      "borderBottom": "1px solid var(--vscode-inputValidation-errorBorder)",
      "borderColor": "var(--vscode-inputValidation-errorBorder)",
      "borderLeft": "1px solid var(--vscode-inputValidation-errorBorder)",
      "borderRadius": "var(--vscode-cornerRadius-small)",
      "borderRight": "1px solid var(--vscode-inputValidation-errorBorder)",
      "color": "var(--vscode-input-foreground)",
      "margin": 0,
      "paddingBottom": 5,
      "paddingLeft": 8,
      "paddingTop": 4,
    },
  ],
  "field": Array [
    Object {
      "backgroundColor": "var(--vscode-input-background)",
      "borderRadius": 4,
      "boxSizing": "border-box",
      "color": "var(--vscode-input-foreground)",
      "fontSize": "13px",
      "fontWeight": "normal",
      "selectors": Object {
        "::placeholder": Object {
          "color": "var(--vscode-input-placeholderForeground)",
          "fontSize": 13,
        },
      },
    },
    Object {
      "lineHeight": "normal",
    },
    undefined,
    undefined,
    undefined,
    undefined,
  ],
  "fieldGroup": Array [
    Object {
      "backgroundColor": "var(--vscode-input-background)",
      "borderColor": "var(--vscode-editorWidget-border)",
      "borderRadius": 4,
      "borderStyle": "solid",
      "borderWidth": 1,
      "boxSizing": "initial",
      "color": "var(--vscode-input-foreground)",
    },
    Object {
      "height": 24,
      "maxHeight": 24,
      "minHeight": 24,
    },
    Object {
      "selectors": Object {
        "&:hover": Object {
          "borderColor": "var(--vscode-focusBorder)",
        },
      },
    },
    undefined,
    undefined,
    undefined,
    undefined,
  ],
  "icon": Array [
    Object {
      "bottom": 2,
    },
  ],
  "root": Object {
    "height": "auto",
  },
  "subComponentStyles": Object {
    "label": Object {
      "root": Array [
        Object {
          "color": "var(--vscode-input-foreground)",
          "fontSize": "13px",
          "fontWeight": "bold",
          "marginTop": 25,
          "padding": "4px 0",
        },
        undefined,
        undefined,
      ],
    },
  },
  "suffix": Object {
    "backgroundColor": "var(--vscode-input-background)",
  },
}
`;

exports[`<UITextInput /> Styles - multiline=true, disabled=true, readOnly=undefined 1`] = `
Object {
  "errorMessage": Array [
    Object {
      "backgroundColor": "var(--vscode-inputValidation-errorBackground)",
      "borderBottom": "1px solid var(--vscode-inputValidation-errorBorder)",
      "borderColor": "var(--vscode-inputValidation-errorBorder)",
      "borderLeft": "1px solid var(--vscode-inputValidation-errorBorder)",
      "borderRadius": "var(--vscode-cornerRadius-small)",
      "borderRight": "1px solid var(--vscode-inputValidation-errorBorder)",
      "color": "var(--vscode-input-foreground)",
      "margin": 0,
      "paddingBottom": 5,
      "paddingLeft": 8,
      "paddingTop": 4,
    },
  ],
  "field": Array [
    Object {
      "backgroundColor": "var(--vscode-input-background)",
      "borderRadius": 4,
      "boxSizing": "border-box",
      "color": "var(--vscode-input-foreground)",
      "fontSize": "13px",
      "fontWeight": "normal",
      "selectors": Object {
        "::placeholder": Object {
          "color": "var(--vscode-input-placeholderForeground)",
          "fontSize": 13,
        },
      },
    },
    Object {
      "lineHeight": "normal",
    },
    undefined,
    undefined,
    undefined,
    undefined,
  ],
  "fieldGroup": Array [
    Object {
      "backgroundColor": "var(--vscode-input-background)",
      "borderColor": "var(--vscode-editorWidget-border)",
      "borderRadius": 4,
      "borderStyle": "solid",
      "borderWidth": 1,
      "boxSizing": "initial",
      "color": "var(--vscode-input-foreground)",
    },
    Object {
      "height": 24,
      "maxHeight": 24,
      "minHeight": 24,
    },
    Object {
      "selectors": Object {
        "&:hover": Object {
          "borderColor": "var(--vscode-focusBorder)",
        },
      },
    },
    undefined,
    undefined,
    undefined,
    undefined,
  ],
  "icon": Array [
    Object {
      "bottom": 2,
    },
  ],
  "root": Object {
    "height": "auto",
  },
  "subComponentStyles": Object {
    "label": Object {
      "root": Array [
        Object {
          "color": "var(--vscode-input-foreground)",
          "fontSize": "13px",
          "fontWeight": "bold",
          "marginTop": 25,
          "padding": "4px 0",
        },
        undefined,
        undefined,
      ],
    },
  },
  "suffix": Object {
    "backgroundColor": "var(--vscode-input-background)",
  },
}
`;

exports[`<UITextInput /> Styles - multiline=true, disabled=undefined, readOnly=true 1`] = `
Object {
  "errorMessage": Array [
    Object {
      "backgroundColor": "var(--vscode-inputValidation-errorBackground)",
      "borderBottom": "1px solid var(--vscode-inputValidation-errorBorder)",
      "borderColor": "var(--vscode-inputValidation-errorBorder)",
      "borderLeft": "1px solid var(--vscode-inputValidation-errorBorder)",
      "borderRadius": "var(--vscode-cornerRadius-small)",
      "borderRight": "1px solid var(--vscode-inputValidation-errorBorder)",
      "color": "var(--vscode-input-foreground)",
      "margin": 0,
      "paddingBottom": 5,
      "paddingLeft": 8,
      "paddingTop": 4,
    },
  ],
  "field": Array [
    Object {
      "backgroundColor": "var(--vscode-input-background)",
      "borderRadius": 4,
      "boxSizing": "border-box",
      "color": "var(--vscode-input-foreground)",
      "fontSize": "13px",
      "fontWeight": "normal",
      "selectors": Object {
        "::placeholder": Object {
          "color": "var(--vscode-input-placeholderForeground)",
          "fontSize": 13,
        },
      },
    },
    Object {
      "lineHeight": "normal",
    },
    undefined,
    undefined,
    Object {
      "backgroundColor": "var(--vscode-editor-background)",
      "fontStyle": "italic",
    },
    undefined,
  ],
  "fieldGroup": Array [
    Object {
      "backgroundColor": "var(--vscode-input-background)",
      "borderColor": "var(--vscode-editorWidget-border)",
      "borderRadius": 4,
      "borderStyle": "solid",
      "borderWidth": 1,
      "boxSizing": "initial",
      "color": "var(--vscode-input-foreground)",
    },
    Object {
      "height": 24,
      "maxHeight": 24,
      "minHeight": 24,
    },
    Object {
      "selectors": Object {
        "&:hover": Object {
          "borderColor": "var(--vscode-focusBorder)",
        },
      },
    },
    undefined,
    Object {
      "backgroundColor": "var(--vscode-editor-background)",
      "borderStyle": "dashed",
      "selectors": Object {
        "&:hover": Object {
          "borderColor": "var(--vscode-editorWidget-border)",
        },
      },
    },
    undefined,
    undefined,
  ],
  "icon": Array [
    Object {
      "bottom": 2,
    },
  ],
  "root": Object {
    "height": "auto",
  },
  "subComponentStyles": Object {
    "label": Object {
      "root": Array [
        Object {
          "color": "var(--vscode-input-foreground)",
          "fontSize": "13px",
          "fontWeight": "bold",
          "marginTop": 25,
          "padding": "4px 0",
        },
        undefined,
        undefined,
      ],
    },
  },
  "suffix": Object {
    "backgroundColor": "var(--vscode-input-background)",
  },
}
`;

exports[`<UITextInput /> Styles - multiline=true, disabled=undefined, readOnly=undefined 1`] = `
Object {
  "errorMessage": Array [
    Object {
      "backgroundColor": "var(--vscode-inputValidation-errorBackground)",
      "borderBottom": "1px solid var(--vscode-inputValidation-errorBorder)",
      "borderColor": "var(--vscode-inputValidation-errorBorder)",
      "borderLeft": "1px solid var(--vscode-inputValidation-errorBorder)",
      "borderRadius": "var(--vscode-cornerRadius-small)",
      "borderRight": "1px solid var(--vscode-inputValidation-errorBorder)",
      "color": "var(--vscode-input-foreground)",
      "margin": 0,
      "paddingBottom": 5,
      "paddingLeft": 8,
      "paddingTop": 4,
    },
  ],
  "field": Array [
    Object {
      "backgroundColor": "var(--vscode-input-background)",
      "borderRadius": 4,
      "boxSizing": "border-box",
      "color": "var(--vscode-input-foreground)",
      "fontSize": "13px",
      "fontWeight": "normal",
      "selectors": Object {
        "::placeholder": Object {
          "color": "var(--vscode-input-placeholderForeground)",
          "fontSize": 13,
        },
      },
    },
    Object {
      "lineHeight": "normal",
    },
    undefined,
    undefined,
    undefined,
    undefined,
  ],
  "fieldGroup": Array [
    Object {
      "backgroundColor": "var(--vscode-input-background)",
      "borderColor": "var(--vscode-editorWidget-border)",
      "borderRadius": 4,
      "borderStyle": "solid",
      "borderWidth": 1,
      "boxSizing": "initial",
      "color": "var(--vscode-input-foreground)",
    },
    Object {
      "height": 24,
      "maxHeight": 24,
      "minHeight": 24,
    },
    Object {
      "selectors": Object {
        "&:hover": Object {
          "borderColor": "var(--vscode-focusBorder)",
        },
      },
    },
    undefined,
    undefined,
    undefined,
    undefined,
  ],
  "icon": Array [
    Object {
      "bottom": 2,
    },
  ],
  "root": Object {
    "height": "auto",
  },
  "subComponentStyles": Object {
    "label": Object {
      "root": Array [
        Object {
          "color": "var(--vscode-input-foreground)",
          "fontSize": "13px",
          "fontWeight": "bold",
          "marginTop": 25,
          "padding": "4px 0",
        },
        undefined,
        undefined,
      ],
    },
  },
  "suffix": Object {
    "backgroundColor": "var(--vscode-input-background)",
  },
}
`;

exports[`<UITextInput /> Styles - required 1`] = `
Object {
  "errorMessage": Array [
    Object {
      "backgroundColor": "var(--vscode-inputValidation-errorBackground)",
      "borderBottom": "1px solid var(--vscode-inputValidation-errorBorder)",
      "borderColor": "var(--vscode-inputValidation-errorBorder)",
      "borderLeft": "1px solid var(--vscode-inputValidation-errorBorder)",
      "borderRadius": "var(--vscode-cornerRadius-small)",
      "borderRight": "1px solid var(--vscode-inputValidation-errorBorder)",
      "color": "var(--vscode-input-foreground)",
      "margin": 0,
      "paddingBottom": 5,
      "paddingLeft": 8,
      "paddingTop": 4,
    },
  ],
  "field": Array [
    Object {
      "backgroundColor": "var(--vscode-input-background)",
      "borderRadius": 4,
      "boxSizing": "border-box",
      "color": "var(--vscode-input-foreground)",
      "fontSize": "13px",
      "fontWeight": "normal",
      "selectors": Object {
        "::placeholder": Object {
          "color": "var(--vscode-input-placeholderForeground)",
          "fontSize": 13,
        },
      },
    },
    Object {
      "lineHeight": "normal",
    },
    undefined,
    undefined,
    undefined,
    undefined,
  ],
  "fieldGroup": Array [
    Object {
      "backgroundColor": "var(--vscode-input-background)",
      "borderColor": "var(--vscode-editorWidget-border)",
      "borderRadius": 4,
      "borderStyle": "solid",
      "borderWidth": 1,
      "boxSizing": "initial",
      "color": "var(--vscode-input-foreground)",
    },
    Object {
      "height": 24,
      "maxHeight": 24,
      "minHeight": 24,
    },
    Object {
      "selectors": Object {
        "&:hover": Object {
          "borderColor": "var(--vscode-focusBorder)",
        },
      },
    },
    undefined,
    undefined,
    undefined,
    undefined,
  ],
  "icon": Array [
    Object {
      "bottom": 2,
    },
  ],
  "root": Object {
    "height": "auto",
  },
  "subComponentStyles": Object {
    "label": Object {
      "root": Array [
        Object {
          "color": "var(--vscode-input-foreground)",
          "fontSize": "13px",
          "fontWeight": "bold",
          "marginTop": 25,
          "padding": "4px 0",
        },
        undefined,
        undefined,
      ],
    },
  },
  "suffix": Object {
    "backgroundColor": "var(--vscode-input-background)",
  },
}
`;
